--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "vue-autocomplete",
   "version": "0.0.1",
   "description": "Autocomplete Components for Vue.js",
-  "main": "index.html",
+  "main": "./vue-autocomplete.vue",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "gulp"
   },
   "keywords": [
     "vue-js",
@@ -25,10 +25,10 @@
     "vinyl-source-stream": "^1.1.0",
     "vue-hot-reload-api": "^1.2.2",
     "vueify": "^8.3.2",
+    "dev": "^0.1.3",
     "vueify-insert-css": "^1.0.0"
   },
   "dependencies": {
-    "dev": "^0.1.3",
-    "vueify": "^8.3.2"
+    "vue": "^1.0.7"
   }
 }
